--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="container">
       <div class="row my-5">
         <div class="  col-md-6 col-12 col-xxl-6">
-          <figure class="abt-img">
+          <figure class="">
             <img src="slides/animated-boy.svg" alt="image" class="img-fluid about-img">
           </figure>
         </div>
